tests/compile-fail/tracked_fn_return_not_salsa_value.stderr
error[E0277]: the tracked function's return type `NotSalsaValue<'db>` does not implement `SalsaValue`
  --> tests/compile-fail/tracked_fn_return_not_salsa_value.rs:12:58
   |
12 | fn tracked_fn<'db>(_db: &'db dyn Db, _input: MyInput) -> NotSalsaValue<'db> {
   |                                                          ^^^^^^^^^^^^^^^^^^ does not implement `SalsaValue`
   |
help: the trait `_assert_output_is_salsa_value::SalsaValue` is not implemented for `NotSalsaValue<'db>`
  --> tests/compile-fail/tracked_fn_return_not_salsa_value.rs:9:1
   |
 9 | struct NotSalsaValue<'db>(PhantomData<fn() -> &'db ()>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: consider deriving `salsa::SalsaValue` for the tracked function's return type if it is safe to retain across revisions
note: required by a bound in `assert_salsa_value`
  --> tests/compile-fail/tracked_fn_return_not_salsa_value.rs:11:1
   |
11 | #[salsa::tracked]
   | ^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value`
   = note: this error originates in the attribute macro `salsa::tracked` (in Nightly builds, run with -Z macro-backtrace for more info)
